# btcpool-ABANDONED

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  INSTALL.md  LICENSE  README.md  run-clang-format.sh
.circleci/: config.yml
.github/workflows/: ccpp.yml
cmake/: BuildLibBTCPool.cmake
cmake/Modules/: FindKafkaC.cmake  FindLibConfig.cmake  FindLibDL.cmake  FindLibEvent.cmake  FindLibGMP.cmake  FindLibHiredis.cmake  FindLibMysqlClient.cmake  FindLibPthread.cmake  FindMYSQL.cmake  FindSasl2.cmake  FindZookeeperC.cmake  Findlibzmq.cmake
docker/eth-private/: CustomGenesis.json  init.bat  run.bat
docs/: AGENT.md  Benchmark-100000.md  Example_for_Modify_the_Config_File.md  INSTALL-BTCPool.md  INSTALL-Kafka.md  INSTALL-Redis.md  INSTALL-Supervisor.md  INSTALL-ZooKeeper.md  MergedMining.md  NiceHash-Configurations.md  Prometheus-Metrics.md  UPGRADE-BTCPool-zhCN.md  UPGRADE-BTCPool.md  btcpool.graffle  example for modify the config file.md  trb_stratum_protocol.md
docs/Eth/: Hashrate allocation.docx  INSTALL-ETHPool.md  Stratum (claymore + ethermine.org).docx  Stratum (duplicate submission).docx  Stratum (etherminer + ethermine.org).docx  uml.mdj
docs/bytom/: STRATUM-BTM.md  blockheader_V3.go  info.docx
golang/: Dockerfile  go.mod  go.sum  version.go
golang/nodebridge/: main.go
golang/orphan-monitor/: go.mod  go.sum  main.go
hooks/: build
install/: bpool_local_db.sql  bpool_local_db_BEAM.sql  bpool_local_db_Bytom.sql  bpool_local_db_CKB.sql  bpool_local_db_Decred.sql  bpool_local_db_ETH.sql  bpool_local_db_Grin.sql  bpool_local_db_TRB.sql  bpool_local_stats_db.sql  build_libsnark.sh  build_sbtc_for_btcpool.sh  clean-blocksaver-mysql-data.py  cp_btcpool_bin.sh  db.change.ETH.sql  db.change.sql  init_executables.sh  init_folders.sh  init_package_folders.sh  install_btcpool.sh  patch_sbtc_for_btcpool.sh  poolwatcher_receive_log.sql  zpool_local_db.sql  zpool_local_stats_db.sql
install/api-sample/: README.md  autoreg.php
install/supervisord/: blkmaker.conf  blksaver.conf  gbtmaker.conf  gbtsync.conf  gwmaker.conf  jobmaker.conf  nmcauxmaker.conf  poolwatcher.conf  replace_root_dir.sh  sharelogger.conf  slparser.conf  sserver.conf  statshttpd.conf
prebuild/bytom/: bh_shared.h
reservoir/: go.mod  go.sum  version.go
reservoir/nodebridge/: main.go
rust/: .gitignore  Cargo.toml  Dockerfile
rust/nodebridge/: Cargo.toml
rust/nodebridge/src/: main.rs
rust/nodebridge/src/ckb/: job.rs  mod.rs  rpc.rs
src/: BitcoinUtils.cc  BitcoinUtils.h  BlockMaker.cc  BlockMaker.h  Common.cc  Common.h  CommonBitcoin.cc  CreateStratumServerTemp.cc  CreateStratumServerTemp.h  DiffController.cc  DiffController.h  Difficulty.cc  Difficulty.h  DynamicLoader.cc  DynamicLoader.h  DynamicWrapper.cc  DynamicWrapper.h  EthConsensus.cc  EthConsensus.h  GbtMaker.cc  GbtMaker.h  GwMaker.cc  GwMaker.h  JobMaker.cc  JobMaker.h  JobMaker.h.orig  Kafka.cc  Kafka.h  Management.cc  Management.h  MySQLConnection.cc  MySQLConnection.h  Network.h  NodeBoost.cc  NodeBoost.h  RedisConnection.cc  RedisConnection.h  ShareLogParser.cc  ShareLogParser.h  ShareLogParser.inl  (+48 more)
src/beam/: CommonBeam.cc  CommonBeam.h  ShareLogParserBeam.cc  ShareLogParserBeam.h  ShareLoggerBeam.cc  ShareLoggerBeam.h  StatisticsBeam.cc  StatisticsBeam.h  (+15 more)
src/blksaver/: CMakeLists.txt  README.md  blksaver.cfg  blocksaver.cpp  blocksaver.h  create_table.sql  datamanager.h  dataoperation_base.cpp  dataoperation_file.cpp  dataoperation_file.h
src/blksaver/main/: blocksavermain.cpp
src/gbtsync/: CMakeLists.txt  README.md  datamanager.cpp  datamanager.h  dataoperation_base.h  dataoperation_file.cpp  dataoperation_file.h  dataoperation_mysql.cpp  dataoperation_mysql.h  gbtsync.cfg  gbtsync.cpp  gbtsync.h
src/gbtsync/main/: gbtsyncmain.cpp
src/libblake2/: CMakeLists.txt
test/: TestBitcoinUtils.cc  TestCommon.cc  TestGbtMaker.cc  TestMain.cc  TestSimulatorMiner.cc  TestStatistics.cc  TestStratum.cc  TestStratumServer.cc  TestStratumSession.cc  TestUtils.cc
tools/: README.md
tools/bitcoin/gbtsync/: CMakeLists.txt  README.md  datamanager.h  dataoperation_base.h  dataoperation_file.h  dataoperation_mysql.cpp  dataoperation_mysql.h  gbtsync.cfg  gbtsync.h
tools/bitcoin/gbtsync/TestGbtSync/: testdataoperationmanager_common.h
tools/bitcoin/gbtsync/TestGbtSync/testdata/filedataoperationmanagertestdata/ABC_XYZ/: correct.number.txt
tools/bitcoin/gbtsync/TestGbtSync/testdata/filedataoperationmanagertestdata/metadata_eof/: correct.number.txt  wrong.txt
tools/bitcoin/gbtsync/TestGbtSync/testdata/filemanagertestdata/: correct.empty.txt  wrong.empty.txt
tools/bitcoin/gbtsync/main/: gbtsyncmain.cpp
tools/kafka_repeater/: CMakeLists.txt  Dockerfile  KafkaRepeater.hpp  MessagePrinter.hpp  README.md  ShareConvertor.hpp  SharePrinter.hpp  entrypoint.sh  kafka_repeater.cfg  main.cc
tools/share_convertor/: CMakeLists.txt  README.md  main.cc
tools/sharelog_to_parquet/: CMakeLists.txt  Difficulty.hpp  Dockerfile  ParquetWritter.hpp  README.md  ShareLogParser.h  ShareLogParser.inl  StratumBeam.hpp  StratumBitcoin.hpp  StratumEth.hpp  StratumStatus.h  arith_uint256.cpp  entrypoint.sh  main.cc  share_to_parquet.cfg  uint256.h
tools/sharelog_to_parquet/compat/: endian.h
tools/sharelog_to_parquet/config/: bitcoin-config.h
tools/stratum_log_proxy/: .gitignore  CMakeLists.txt  Dockerfile  README.md  StratumAnalyzer.hpp  StratumBase.hpp  StratumProxy.hpp  build-docker-img.sh  docker-compose.yml  entrypoint.sh  get_eth_header.go  import-docker-img.sh  main.cc  mysql.sql  restart-proxy.sh  run-proxy.sh  stop-proxy.sh  stratum_log_proxy.cfg  update-share-info.sql
tools/stratum_log_proxy/get_eth_header/: Dockerfile  get_eth_header.go
tools/stratum_log_proxy/sql/: create-table.sql  mysql.sql
tools/stratum_log_proxy/src/: StratumAnalyzer.hpp  StratumBase.hpp
tools/tls_decrypt_proxy/: CMakeLists.txt  README.md  TLSProxy.hpp  main.cc  tls_decrpyt_proxy.cfg
tools/worker_update/: CMakeLists.txt  Dockerfile  MySQLConnection.hpp  README.md  WorkerUpdate.hpp  entrypoint.sh  main.cc  worker_update.cfg
(+821 files in other folders)
